# carla_ros2_client

./: .gitmodules  LICENSE  README.md  package.xml  setup.cfg  setup.py
carla_client_cpp/: CMakeLists.txt  package.xml
carla_client_cpp/src/: carla_client.cpp
carla_client_py/: package.xml  setup.cfg  setup.py
carla_client_py/carla_client_py/: carla_client.py
carla_debug_viz_py/: package.xml  setup.cfg  setup.py
carla_debug_viz_py/carla_debug_viz_py/: carla_debug_viz.py
carla_ros2_client/: carla_client.py
carla_video_decode/: CMakeLists.txt  package.xml
carla_video_decode/include/: pixfmt_convert.hpp  video_decoder.hpp
carla_video_decode/src/: pixfmt_convert.cpp  video_dec_node.cpp  video_decoder.cpp
jetson_video_dec/: CMakeLists.txt  package.xml
jetson_video_dec/include/: gst_c_callback.hpp  gst_video_dec.hpp
jetson_video_dec/src/: gst_c_callback.cpp  gst_video_dec.cpp  video_dec_node.cpp
ros_compatibility/: package.xml  setup.py
ros_compatibility/src/ros_compatibility/: __init__.py  callback_groups.py  exceptions.py  executors.py  logging.py  node.py
