<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_compatibility</name>
  <version>0.0.0</version>
  <description>The ros_compatibility package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
